ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-ingress
  namespace: example-app
  annotations:
    kubernetes.io/ingress.class: nginx-romo
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true" 
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx-romo
  tls:
  - hosts:
    - romiari.me
    - www.romiari.me
    secretName: example-app-secret
  rules:
    - host: romiari.me
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: example-app-service
                port:
                  number: 8020
    - host: www.romiari.me
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: example-app-service
                port:
                  number: 8020
