ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx-romo
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: simple-app-encrypt
spec:
  ingressClassName: nginx-romo
  tls:
  - hosts:
    - grafana.romiari.me
    secretName: nginx-ingress-certificate
  rules:
  - host: grafana.romiari.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: monitoring-grafana
            port:
              name: https
