ingress/nginx-ingress-romo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress-romo
  namespcae: argocd-romo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: argo.romo.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-server
            port:
              number: 8001
