ingress/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx-romo
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx-romo
  tls:
  - hosts:
    - prometheus.romiari.me
    secretName: prometheus-ingress-secret
  rules:
  - host: prometheus.romiari.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: monitoring-kube-prometheus-prometheus
            port:
              number: 9090
